# peekdown

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
src/: app.rs  assets.rs  file_watcher.rs  ipc.rs  main.rs  registry.rs
src/core/: mod.rs
src/io/: mod.rs
src/parser/: mod.rs
src/services/: mod.rs  shell.rs  syntax.rs
src/state/: config.rs  document.rs  frontmatter.rs  mod.rs  theme.rs
src/text/: document.rs  element_ext.rs  global_state.rs  highlighter_cache.rs  inline.rs  languages.rs  mermaid.rs  mod.rs  node.rs  selection.rs  state.rs  style.rs  text_view.rs  utils.rs
src/text/format/: html.rs  markdown.rs
src/text/format/html5minify/: mod.rs
src/ui/: mod.rs
src/workspace/: file_explorer.rs  header.rs  markdown_view.rs  mod.rs  outline.rs  search_bar.rs  settings_dialog.rs  welcome.rs
