[package]
name = "peekdown"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5.0"
smol = "2.0"
async-fs = "2.0"
futures = "0.3"
rust-embed = "8.2.0"
pulldown-cmark = { version = "0.12", features = ["simd"] }
syntect = { version = "5.2", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
notify = "6.1"
encoding_rs = "0.8"
chardetng = "0.1"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
winres = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
