[package]
name = "peekdown"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2.2"
gpui-component = { version = "0.5", features = ["tree-sitter-languages"] }
gpui-component-assets = "0.5"
smol = "2.0"
async-fs = "2.0"
futures = "0.3"
rust-embed = "8.2.0"
pulldown-cmark = { version = "0.12", features = ["simd"] }
syntect = { version = "5.2", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
notify = "6.1"
encoding_rs = "0.8"
chardetng = "0.1"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
winreg = "0.52"
interprocess = "2.2.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
toml = "0.8"
dirs = "5.0"
windows-sys = { version = "0.61.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_Foundation", "Win32_System_Threading"] }
markdown = { version = "1.0.0", features = ["serde"] }
html5ever = "0.27"
markup5ever_rcdom = "0.3.0"
ropey = "1.6"
tree-sitter-kotlin = { git = "https://github.com/fwcd/tree-sitter-kotlin", branch = "main" }
ignore = "0.4"

[build-dependencies]
winres = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
